<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zoli.weatherxml.MainActivity"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:id="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:layout_marginTop="15dp"
        android:textSize="32dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/textView"
        android:ems="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingTop="100dp"
        android:layout_marginTop="15dp"
        android:textSize="32dp" />
    <EditText

        android:id="@+id/editText2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:ems="4" />
    <TextView
        android:paddingLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        android:id="@+id/textView3"
        android:layout_toRightOf="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:textSize="32dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:id="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="55dp"
        android:paddingRight="10dp"
        android:paddingTop="170dp"
        android:layout_marginTop="15dp"
        android:textSize="32dp" />
    <EditText

        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherbutton"
        android:id="@+id/button1"
        android:singleLine="true"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1" />
</RelativeLayout>
